<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context="com.ahmedmakramallah.musicalapp.MainActivity">

    <TextView
        android:id="@+id/artists"
        style="@style/CategoryStyle"
        android:background="@color/category_artists"
        android:text="@string/category_artists"
        android:onClick="openNumbersList"/>

    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:background="@color/category_albums"
        android:text="@string/category_albums" />

    <TextView
        android:id="@+id/playlists"
        style="@style/CategoryStyle"
        android:background="@color/category_playlists"
        android:text="@string/category_playlists" />

    <TextView
        android:id="@+id/podcasts"
        style="@style/CategoryStyle"
        android:background="@color/category_podcasts"
        android:text="@string/category_podcasts" />

</LinearLayout>
